fixed alignment

--- a/src/components/BusyHoursInput/busy-hours-input.scss
+++ b/src/components/BusyHoursInput/busy-hours-input.scss
@@ -5,7 +5,7 @@
 .busy-hours-form {
     display: flex;
     flex-direction: row;
-    margin: $margin-l 0;
+    margin: $margin-m 0;
     align-items: center;
 
     &__input-data,  &__input {
