--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -4,5 +4,5 @@
 .main {
     display: flex;
     flex-direction: column;
-    margin: $margin-l;
+    margin: $margin-m $margin-l;
 }
