--- a/src/components/Tables/tables.scss
+++ b/src/components/Tables/tables.scss
@@ -15,19 +15,19 @@
         text-align: left;
         color: $color-main;
         font-family: $font-family;
+        font-size: $font-size-s;
+
     }
 
     &__names {
         background-color: $color-grey;
         border-bottom: 1px solid $color-main;
         padding: 0.5rem;
-        font-size: $font-size-m;
         font-weight: $font-weight-strong;
     }
 
     &__data {
         padding: 0.5rem 2rem 0.5rem 0.5rem;
-        font-size: $font-size-s;
         font-weight: $font-weight;
 
     }
