--- a/src/components/TaskInput/task.scss
+++ b/src/components/TaskInput/task.scss
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: $margin-l;
 
     &__input {
         display: flex;
